--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "postcss-load-config": "^4.0.1",
     "svelte": "^4.2.3",
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "firebase": "^10.7.1"
   }
 }
