--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "firebase": "^10.7.1"
+    "firebase": "^10.7.1",
+    "svelte-routing": "^2.10.0"
   }
 }
