--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install npm dependencies
-        run: npm install
+        run: npm install --force
       - name: Build the project
         run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
