--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "carbon-components": "^10.58.12",
+    "carbon-icons-svelte": "^12.4.2",
     "firebase": "^10.7.1",
     "svelte-routing": "^2.10.0"
   }
