--- a/package.json
+++ b/package.json
@@ -1,26 +1,44 @@
 {
-  "name": "nexus",
+  "name": "web-app",
+  "version": "0.0.1",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "test": "npm run test:integration && npm run test:unit",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "test:integration": "playwright test",
+    "test:unit": "vitest"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "autoprefixer": "^10.4.14",
-    "carbon-components-svelte": "^0.82.7",
-    "postcss": "^8.4.24",
-    "postcss-load-config": "^4.0.1",
-    "svelte": "^4.2.3",
-    "vite": "^5.0.0"
+    "@playwright/test": "^1.28.1",
+    "@skeletonlabs/skeleton": "2.6.1",
+    "@skeletonlabs/tw-plugin": "0.3.0",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/eslint": "8.56.0",
+    "autoprefixer": "10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.35.1",
+    "postcss": "8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.0",
+    "tailwindcss": "3.4.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.3",
+    "vite-plugin-tailwind-purgecss": "0.2.0",
+    "vitest": "^1.0.0"
   },
+  "type": "module",
   "dependencies": {
-    "carbon-components": "^10.58.12",
-    "carbon-icons-svelte": "^12.4.2",
-    "firebase": "^10.7.1",
-    "svelte-routing": "^2.10.0"
+    "firebase": "^10.7.1"
   }
 }
