--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -18,6 +18,14 @@ jobs:
           node-version: '18'
       - name: Install npm dependencies
         run: npm install --force
+      - name: Create .env file
+        run: |
+          echo "PUBLIC_FB_API_KEY=${{ secrets.PUBLIC_FB_API_KEY }}" >> .env
+          echo "PUBLIC_FB_AUTH_DOMAIN=${{ secrets.PUBLIC_FB_AUTH_DOMAIN }}" >> .env
+          echo "PUBLIC_FB_PROJECT_NAME=${{ secrets.PUBLIC_FB_PROJECT_NAME }}" >> .env
+          echo "PUBLIC_FB_STORAGE_BUCKET=${{ secrets.PUBLIC_FB_STORAGE_BUCKET }}" >> .env
+          echo "PUBLIC_FB_MESSAGING_SENDER_ID=${{ secrets.PUBLIC_FB_MESSAGING_SENDER_ID }}" >> .env
+          echo "PUBLIC_FB_APP_ID=${{ secrets.PUBLIC_FB_APP_ID }}" >> .env
       - name: Build the project
         run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
